# eor_limits

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  agents.md  environment.yaml  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml  labels.yml  release-drafter.yml
.github/workflows/: automerge-deps.yml  check-build-then-deploy.yml  labeler.yml  release-draft.yml  test-suite.yml
docs/: cli_usage.md  conf.py  index.md  library_usage.md  usage_overview.md
docs/reference/: index.rst
docs/reference/_autosummary/: eor_limits.cli.rst  eor_limits.datatypes.rst  eor_limits.plots.plot_vs_k_z.rst
docs/source/: conf.py  guidelines.md  index.md  installation.md  license.md  reference.rst  tutorial.ipynb  usage.md  usage_overview.md
docs/source/_static/: custom.css
eor_limits/: __init__.py  plot_eor_limits.py  process_mesinger_2016.py  process_munoz_2021.py  process_pagano_2020.py
eor_limits/data/: barry_2019.yaml  beardsley_2016.yaml  dillon_2014.yaml  dillon_2015.yaml  eastwood_2019.yaml  ewall-wice_2016.yaml  gehlot_2019.yaml  gehlot_2020.yaml  hera_2021.yaml  hera_2022.yaml  hera_2022c.yaml  hera_2023.yaml  hera_2026.yaml  kolopanis_2019.yaml  li_2019.yaml  mertens_2020.yaml  mertens_2025.yaml  nunhokee_2025.yaml  paciga_2013.yaml  patil_2017.yaml  rahimi_2021.yaml  trott_2020.yaml  wilensky_2023.yaml
eor_limits/data/theory/: mesinger_2016_bright_galaxies_max.yaml  mesinger_2016_bright_galaxies_nf_0.5.yaml  mesinger_2016_bright_galaxies_nf_0.75.yaml  mesinger_2016_faint_galaxies_max.yaml  mesinger_2016_faint_galaxies_nf_0.5.yaml  mesinger_2016_faint_galaxies_nf_0.75.yaml  munoz_2018_fdm3.yaml  pagano_liu_2020.npz
scripts/: process_mesinger_eos.py
src/eor_limits/: __init__.py  _cli.py  _data_loading.py  _datatypes.py  _loading.py  _paths.py  _plot.py  cli.py  data_loading.py  datatypes.py  new_customclass_interface.py  new_pandas_interface.py  plot_vs_k_z.py
src/eor_limits/data/: Acharya2024.yaml  Barry2019.yaml  Beardsley2016.yaml  Dillon2014.yaml  Dillon2015.yaml  Eastwood2019.yaml  Ewall-Wice2016.yaml  Garsden2021.yaml  Gehlot2019.yaml  Gehlot2020.yaml  HERA2022.yaml  HERA2023.yaml  HERA2025.yaml  HERA2026.yaml  Kolopanis2019.yaml  Li2019.yaml  Mertens2020.yaml  Mertens2025.yaml  Munshi2024.yaml  Munshi2025.yaml  Nunhokee2025.yaml  Pal2021.yaml  Parsons2014.yaml  Patil2017.yaml  Rahimi2021.yaml  Trott2025.yaml  Yoshiura2021.yaml  __init__.py  barry_2019.yaml  const.py  dillon_2014.yaml  eastwood_2019.yaml  gehlot_2019.yaml  gehlot_2020.yaml  hera_2022.yaml  hera_2023.yaml  mertens_2020.yaml  munshi_2023.yaml  patil_2017.yaml  rahimi_2021.yaml  (+1 more)
src/eor_limits/new_data/: Acharya2024.yaml  Barry2019.yaml  Beardsley2016.yaml  Dillon2014.yaml  Dillon2015.yaml  Eastwood2019.yaml  Ewall-Wice2016.yaml  Garsden2021.yaml  Gehlot2019.yaml  Gehlot2020.yaml  HERA2025.yaml  Mertens2020.yaml  Mertens2025.yaml  Munshi2025.yaml  Nunhokee2025.yaml  Paciga2013.yaml  Pal2021.yaml  Parsons2014.yaml  Patil2017.yaml  (+3 more)
tests/: conftest.py  test_basic.py  test_cli_plotting.py  test_datatypes.py  test_lib_plotting.py  test_plotting.py  test_theories.py
(+98 files in other folders)
